@@ -4,6 +4,8 @@ boinc (4.45a-2) experimental; urgency=low
   * debian/boinc-client.init:
     - Added status option to init.d script as proposed in Debian bug #291148.
   * debian/control.in:
+    - Removed Build-Conflicts on automake1.4 and automake1.6, because we invoke
+      aclocal-1.9 and automake-1.9 in debian/rules directly now.
     - Bumped Standards-Version from 3.6.1 to 3.6.2, no changes required.
   * Added missing options to boinc-client manpage.
 
